# YCSB-C-RocksDB

./: .gitignore  CMakeLists.txt  README.md  ycsbc.cc
bench/: load1KB20GB_2022-03-23-00:00:31_nvme-load-375M.txt  load1KB20GB_2022-03-23-14:04:04_nvme-load-375M.txt  run.sh  run1KB20GB_2022-03-23-00:00:31_nvme-workloada-375M.txt  run1KB20GB_2022-03-23-00:00:31_nvme-workloadb-375M.txt  run1KB20GB_2022-03-23-00:00:31_nvme-workloadd-375M.txt  run1KB20GB_2022-03-23-14:04:04_nvme-workloada-375M.txt  run1KB20GB_2022-03-23-14:04:04_nvme-workloadb-375M.txt  run1KB20GB_2022-03-23-14:04:04_nvme-workloadd-375M.txt  run1k100GB.sh  run1k10GB.sh  run1k20GB.sh  run1k300GB.sh  run_multi.sh  run_multi_perf.sh  runtestworkload.txt  test.sh
core/: client.h  properties.h  timer.h
db/: basic_db.h  db_factory.cc  rocksdb_db.cc  rocksdb_db.h
db_config/: rocksdb_config.ini
testdata/: load1KB300GB_2022-03-25-00-57-17_nvme-load-1k300G.txt  run1KB100GB_2022-03-24-20-49-23_nvme-workloada-1k100G.txt  run1KB100GB_2022-03-24-20-49-23_nvme-workloade-1k100G.txt  run1KB20GB_2022-03-24-17-56-02_nvme-workloadd-1k20G.txt  run1KB20GB_2022-03-24-17:56:02_nvme-workloada-1k20G.txt  run1KB20GB_2022-03-24-17:56:02_nvme-workloadb-1k20G.txt  run1KB20GB_2022-03-24-17:56:02_nvme-workloadc-1k20G.txt  run1KB20GB_2022-03-24-17:56:02_nvme-workloadf-1k20G.txt  run1KB300GB_2022-03-25-00-57-17_nvme-workloada-1k300G.txt  run1KB300GB_2022-03-25-00-57-17_nvme-workloadd-1k300G.txt
utils/: rocksdb_config.h
workloads-test/: workloada.spec  workloadb1KB1GB.spec  workloadb1KB40GB.spec  workloadb1KB60GB.spec  workloadc.spec  (+28 more)
(+25 files in other folders)
